# libjnitl

./: CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
include/: jnitl.h
test/: CMakeLists.txt  basic.cc  class-loader.cc  global-ref.cc  native-method.cc
